--- a/admin.html
+++ b/admin.html
@@ -1,90 +1,144 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
   <script src="script.js" type="module"></script>
 </head>
 <body>
   <header class="site-header">
-    <nav>
-      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
-      <div class="nav-links">
-        <a href="index.html">Products</a>
-        <a href="status.html">Order Status</a>
-        <a href="admin.html">Admin</a>
+    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
+      <div class="logo">
+        <a href="index.html"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></a>
       </div>
+      <div class="nav-links flex gap-4">
+        <a href="index.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Home</a>
+        <a href="products.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Products</a>
+        <a href="cart.html" class="px-3 py-2 rounded-lg hover:bg-gray-200 relative">
+          Cart <span id="cart-count" class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-2 py-1"></span>
+        </a>
+        <a href="status.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Order Status</a>
+        <a href="admin.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Admin</a>
+      </div>
+      <form id="search-form" class="flex ml-4">
+        <input id="search-query" type="text" placeholder="Search products..." class="p-2 border border-r-0 rounded-l-lg focus:outline-none focus:border-blue-500">
+        <button type="submit" class="bg-blue-600 text-white p-2 rounded-r-lg">🔍</button>
+      </form>
     </nav>
   </header>
 
-  <main class="container">
+  <main class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
     <div id="login-panel" class="card" style="display: none;">
-      <h2>Admin Login</h2>
-      <form id="login-form" class="form">
+      <h2 class="text-2xl font-bold mb-4">Admin Login</h2>
+      <form id="login-form" class="form grid gap-4">
         <div>
-          <label>Email</label>
-          <input id="admin-email" type="email" required>
+          <label class="block font-medium">Email</label>
+          <input id="admin-email" type="email" class="w-full p-2 border rounded-lg" required>
         </div>
         <div>
-          <label>Password</label>
-          <input id="admin-pass" type="password" required>
+          <label class="block font-medium">Password</label>
+          <input id="admin-pass" type="password" class="w-full p-2 border rounded-lg" required>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700">Login</button>
       </form>
     </div>
 
     <div id="admin-panel" class="card" style="display: none;">
-      <div class="panel-header">
-        <h2>Admin Panel</h2>
-        <button onclick="logoutAdmin()">Logout</button>
+      <div class="panel-header flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold">Admin Panel</h2>
+        <button onclick="logoutAdmin()" class="bg-red-600 text-white p-2 rounded-lg hover:bg-red-700">Logout</button>
       </div>
 
-      <h2>Add Product</h2>
-      <form id="add-product-form" class="form">
-        <div class="row">
+      <h2 class="text-xl font-semibold mb-4">Add Product</h2>
+      <form id="add-product-form" class="form grid gap-4">
+        <div class="row grid sm:grid-cols-2 gap-4">
           <div>
-            <label>Name</label>
-            <input id="add-name" required>
+            <label class="block font-medium">Name</label>
+            <input id="add-name" class="w-full p-2 border rounded-lg" required>
           </div>
           <div>
-            <label>Price (tk)</label>
-            <input id="add-price" required>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Discount (tk)</label>
-            <input id="add-discount" value="0">
-          </div>
-          <div>
-            <label>Image URL</label>
-            <input id="add-image" required>
+            <label class="block font-medium">Price (tk)</label>
+            <input id="add-price" class="w-full p-2 border rounded-lg" required>
           </div>
         </div>
-        <div class="row">
+        <div class="row grid sm:grid-cols-2 gap-4">
           <div>
-            <label>Category</label>
-            <select id="add-category" required>
-              <option value="all">All</option>
+            <label class="block font-medium">Discount (tk)</label>
+            <input id="add-discount" value="0" class="w-full p-2 border rounded-lg">
+          </div>
+          <div>
+            <label class="block font-medium">Image URLs (comma-separated)</label>
+            <input id="add-images" class="w-full p-2 border rounded-lg" required>
+          </div>
+        </div>
+        <div class="row grid sm:grid-cols-2 gap-4">
+          <div>
+            <label class="block font-medium">Category</label>
+            <select id="add-category" class="w-full p-2 border rounded-lg" required>
               <option value="new">New</option>
               <option value="hot">Hot</option>
+              <option value="preorder">Pre Order</option>
+              <option value="upcoming">Upcoming</option>
             </select>
           </div>
           <div>
-            <label>Color</label>
-            <input id="add-color">
+            <label class="block font-medium">Color</label>
+            <input id="add-color" class="w-full p-2 border rounded-lg">
           </div>
         </div>
-        <div class="row">
+        <div class="row grid sm:grid-cols-2 gap-4">
           <div>
-            <label>Stock</label>
-            <input id="add-stock" type="number" value="0">
+            <label class="block font-medium">Stock</label>
+            <input id="add-stock" type="number" value="0" class="w-full p-2 border rounded-lg">
           </div>
           <div>
-            <label>Availability</label>
-            <select id="add-availability" required>
+            <label class="block font-medium">Availability</label>
+            <select id="add-availability" class="w-full p-2 border rounded-lg" required>
               <option value="Ready">Ready to Order</option>
               <option value="Pre Order">Pre Order</option>
               <option value="Upcoming">Upcoming</option>
@@ -92,15 +146,15 @@
           </div>
         </div>
         <div>
-          <label>Description</label>
-          <textarea id="add-desc"></textarea>
+          <label class="block font-medium">Description</label>
+          <textarea id="add-desc" class="w-full p-2 border rounded-lg min-h-[100px]"></textarea>
         </div>
-        <button type="submit">Add Product</button>
+        <button type="submit" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700">Add Product</button>
       </form>
 
-      <h2>Products</h2>
+      <h2 class="text-xl font-semibold mt-8 mb-4">Products</h2>
       <div class="table-wrapper">
-        <table class="data-table">
+        <table class="data-table w-full border-collapse text-sm">
           <thead>
             <tr>
               <th></th>
@@ -119,9 +173,9 @@
         </table>
       </div>
 
-      <h2>Orders</h2>
+      <h2 class="text-xl font-semibold mt-8 mb-4">Orders</h2>
       <div class="table-wrapper">
-        <table class="data-table">
+        <table class="data-table w-full border-collapse text-sm">
           <thead>
             <tr>
               <th></th>
