--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
           Cart <span id="cart-count" class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-2 py-1"></span>
         </a>
         <a href="status.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Order Status</a>
+        <span id="user-auth">
+          <a href="login.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Login</a>
+        </span>
         <a href="admin.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Admin</a>
       </div>
       <form id="search-form" class="flex ml-4">
